{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 24,
  "lineage": "c4d370c3-c4c7-7149-c2e4-ce4973c0dea2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_id1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729093267362:subnet/subnet-086473b444bc5a220",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 4091,
            "cidr_block": "10.10.128.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086473b444bc5a220",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729093267362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "gh-subnet-private1-us-east-1a"
            },
            "vpc_id": "vpc-0513fe65c646c0e2f"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_id2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729093267362:subnet/subnet-0ee7713a9edfeb98b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4091,
            "cidr_block": "10.10.144.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee7713a9edfeb98b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729093267362",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "gh-subnet-private2-us-east-1b"
            },
            "vpc_id": "vpc-0513fe65c646c0e2f"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729093267362:vpc/vpc-0513fe65c646c0e2f",
            "cidr_block": "10.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00de125e90d2a7b17",
                "cidr_block": "10.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-062a50e1f78f0cdff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0513fe65c646c0e2f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-066bbdae106d95a6f",
            "owner_id": "729093267362",
            "tags": {
              "Name": "gh-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.lambda_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.lambda_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:729093267362:security-group/sg-09fbb33d78ec1dab2",
            "description": "Security group for the GitHub Actions scale agent Lambda in VPC",
            "egress": [],
            "id": "sg-09fbb33d78ec1dab2",
            "ingress": [],
            "name": "gh-scale-agent-v2-default-lambda-sg-20241011060838473300000001",
            "name_prefix": "gh-scale-agent-v2-default-lambda-sg-",
            "owner_id": "729093267362",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DEV",
              "Name": "gh-scale-agent-v2-default-lambda-sg",
              "Owner": "Ramani Sivakumar",
              "Terraform": "true",
              "project": "Internal"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "gh-scale-agent-v2-default-lambda-sg",
              "Owner": "Ramani Sivakumar",
              "Terraform": "true",
              "project": "Internal"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0513fe65c646c0e2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lambda_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1839380958",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09fbb33d78ec1dab2",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.lambda_sg.aws_security_group.this",
            "module.lambda_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.lambda_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/16"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2368350391",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09fbb33d78ec1dab2",
            "security_group_rule_id": "sgr-0277b7b80f6eebc01",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.vpc",
            "module.lambda_sg.aws_security_group.this",
            "module.lambda_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}